# rhachis-rare

./: Cargo.toml  run
examples/: monkey.gltf  simple.rs
src/: camera.rs  debug.wgsl  lib.rs  light.rs  material.rs  model.rs  shader.wgsl
