[package]
name = "renderer"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bytemuck = { version = "1.12.1", features = ["derive"] }
easy-gltf = "0.1.5"
glam = "0.22"
image = "0.24.5"
rhachis = { git = "https://github.com/SalsaGal/rhachis" }
wgpu = "0.14"

[features]
default = ["debug"]
debug = []
